--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "format": "prettier . --check",
+    "format:write": "prettier . --write",
+    "lint": "eslint",
+    "lint:fix": "eslint --fix"
   },
   "private": true,
   "dependencies": {
